tests/ui/errors/issue-99572-impl-trait-on-pointer.stderr
error[E0119]: conflicting implementations of trait `Copy` for type `*mut _`
  --> $DIR/issue-99572-impl-trait-on-pointer.rs:14:1
   |
LL | impl<T> marker::Copy for *mut T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> Copy for *mut T
             where T: ?Sized;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
